--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
      "scripts": {
           "build": "npm run build-server && npm run build-client",
           "build-server": "npx del-cli ./dist && webpack",
-          "build-client": "npx del-cli ./dist/public && cd client && npm run build && cpx ./build/** ../dist/public && cd ../dist",
+          "build-client": "npx del-cli ./dist/public && cd client && npm run build &&npx cpx ./build/** ../dist/public && cd ../dist",
           "start-dev-windows": "SET NODE_ENV=development&& npx nodemon index.ts",
           "start-windows": "SET NODE_ENV=production&& npm run build && node dist/index.js",
           "start": "NODE_ENV=production&& npm run build && node dist/index.js"
@@ -18,6 +18,7 @@
           "bcrypt": "^5.0.1",
           "cookie-parser": "^1.4.6",
           "cors": "^2.8.5",
+          "cpx": "^1.5.0",
           "dotenv": "^16.0.1",
           "express": "^4.18.1",
           "express-session": "^1.17.3",
