--- a/.env
+++ b/.env
@@ -1,12 +1,16 @@
 #SERVER
+DOMAIN = c265-188-170-172-80.eu.ngrok.io
+URL = http://localhost:8000
 PORT = 8000
 CLIENT_PORT = 3000
+CLIENT_URL = http://localhost:3000
 WHITELISTED_DOMAINS = http://localhost:3000,http://localhost:8000,https://oauth.vk.com
 DATABASE_URL="mysql://root:0000@localhost:3306/promenade_history"
 
 #API AUTH
 VK_APP_ID = 8213701
 VK_SECURE_KEY = r4Fpa3RBR10PN4Id06sR
+VK_CALLBACK_URL = /api/authentication/vkontakte/callback
 
 #AUTH
 JWT_SECRET = nzPn2r-4kFPc8uXLC9h-LIt40-DZ3A
