--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
      "license": "ISC",
      "dependencies": {
           "@prisma/client": "^4.0.0",
+          "auth-vk": "^1.1.8",
           "bcrypt": "^5.0.1",
           "cookie-parser": "^1.4.6",
           "cors": "^2.8.5",
