--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
           "@prisma/client": "^4.0.0",
           "auth-vk": "^1.1.8",
           "bcrypt": "^5.0.1",
+          "connect-sqlite3": "^0.9.13",
           "cookie-parser": "^1.4.6",
           "cors": "^2.8.5",
           "cpx": "^1.5.0",
@@ -33,6 +34,7 @@
      },
      "devDependencies": {
           "@types/bcrypt": "^5.0.0",
+          "@types/connect-sqlite3": "^0.9.1",
           "@types/cookie-parser": "^1.4.3",
           "@types/cors": "^2.8.12",
           "@types/express": "^4.17.13",
