--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
           "build-client": "npx del-cli ./dist/public && cd client && npm run build && npx cpx \"./build/**\" \"../dist/public\" && cd ../dist",
           "start-dev-windows": "SET NODE_ENV=development&& npx nodemon index.ts",
           "start-windows": "SET NODE_ENV=production&& npm run build-windows && cd dist && node index.js",
-          "start": "NODE_ENV=production&& npm run build && node dist/index.js"
+          "start": "NODE_ENV=production&& npm run build && cd dist && node index.js"
      },
      "author": "",
      "license": "ISC",
