--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 #SERVER
-URL = "http://localhost:8000"
+URL = "https://localhost:8000"
 PORT = 8000
 CLIENT_PORT = 3000
 CLIENT_URL = "http://localhost:3000"
-WHITELISTED_DOMAINS = "http://localhost:3000,http://localhost:8000,https://oauth.vk.com"
+WHITELISTED_DOMAINS = "http://localhost:3000,https://localhost:8000,https://oauth.vk.com"
 DATABASE_URL="mysql://root:0000@localhost:3306/promenade_history"
+SECURE = 'false'
 
 #VK API AUTH
 VK_APP_ID = 8213701
