--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
      "license": "ISC",
      "dependencies": {
           "@mapbox/node-pre-gyp": "^1.0.9",
-          "@prisma/client": "^4.0.0",
+          "@prisma/client": "^4.1.1",
           "auth-vk": "^1.1.8",
+          "axios": "^0.27.2",
           "bcrypt": "^5.0.1",
           "connect-sqlite3": "^0.9.13",
           "cookie-parser": "^1.4.6",
@@ -51,7 +52,7 @@
           "@types/passport-vkontakte": "^1.3.1",
           "copy-webpack-plugin": "^11.0.0",
           "nodemon": "^2.0.18",
-          "prisma": "^4.0.0",
+          "prisma": "^4.1.1",
           "ts-loader": "^9.3.1",
           "ts-node": "^10.8.2",
           "typescript": "^4.7.4",
