--- a/.env
+++ b/.env
@@ -23,3 +23,4 @@ REFRESH_TOKEN_EXPIRY = 60 * 60 * 24 * 30 * 1000
 
 #QTICKETS API
 QTICKETS_API_TOKEN = "OmpFH6UOkR2gKm7txt5gt81a7tTwjBP8"
+QTICKETS_WEBHOOK_SIGNATURE_SECRET = "38A5E4487F3BC36C639F1D86DEBDB"
