--- a/.env
+++ b/.env
@@ -7,6 +7,10 @@ WHITELISTED_DOMAINS = "http://localhost:3000,https://localhost:8000,https://oaut
 DATABASE_URL="mysql://root:0000@localhost:3306/promenade_history"
 SECURE = 'false'
 
+#EMAIL
+EMAIL_ADDRES = "PromHistory@gmail.com"
+EMAIL_PASSWORD = "nkcdtvqudhvkbxjd"
+
 #VK API AUTH
 VK_APP_ID = 8213701
 VK_SECURE_KEY = "r4Fpa3RBR10PN4Id06sR"
