--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
           "express-session": "^1.17.3",
           "jsonwebtoken": "^8.5.1",
           "node-pre-gyp": "^0.17.0",
+          "nodemailer": "^6.7.7",
           "passport": "^0.6.0",
           "passport-jwt": "^4.0.0",
           "passport-local": "^1.0.0",
@@ -46,6 +47,7 @@
           "@types/express-session": "^1.17.5",
           "@types/jsonwebtoken": "^8.5.8",
           "@types/node": "^18.0.3",
+          "@types/nodemailer": "^6.4.4",
           "@types/passport": "^1.0.9",
           "@types/passport-jwt": "^3.0.6",
           "@types/passport-local": "^1.0.34",
