--- a/develop.env
+++ b/develop.env
@@ -1,11 +1,15 @@
 #SERVER
-URL = "https://localhost:8000"
+URL = "http://localhost:8000"
 PORT = 8000
 CLIENT_PORT = 3000
 CLIENT_URL = "http://localhost:3000"
 WHITELISTED_DOMAINS = "http://localhost:3000,https://localhost:8000,https://oauth.vk.com"
 DATABASE_URL="mysql://root:0000@localhost:3306/promenade_history"
 SECURE = 'false'
+
+#SECURE
+SECURE_CERT_PATH="localhost.pem"
+SECURE_KEY_PATH="localhost-key.pem"
 
 #EMAIL
 EMAIL_ADDRES = "PromHistory@gmail.com"
