--- a/develop.env
+++ b/develop.env
@@ -5,7 +5,7 @@ CLIENT_PORT = 3000
 CLIENT_URL = "http://localhost:3000"
 WHITELISTED_DOMAINS = "http://localhost:3000,https://localhost:8000,https://oauth.vk.com"
 DATABASE_URL="mysql://root:0000@localhost:3306/promenade_history"
-SECURE = 'false'
+SECURE = 'true'
 
 #SECURE
 SECURE_CERT_PATH="localhost.pem"
