--- a/production.env
+++ b/production.env
@@ -1,6 +1,9 @@
 #SERVER
 URL = "promenade-history.ru"
-PORT = 80
+HTTP_PORT = 80
+HTTPS_PORT = 443
+DEV_HTTP_PORT = 8000
+DEV_HTTPS_PORT = 4430
 CLIENT_PORT = 3000
 CLIENT_URL = "http://localhost:3000"
 WHITELISTED_DOMAINS = "http://localhost:3000,https://localhost:8000,https://oauth.vk.com,promenade-history.ru"
@@ -8,8 +11,8 @@ DATABASE_URL="mysql://root:aU6ZvZ8n@localhost:3306/promenade_history"
 SECURE = 'true'
 
 #SECURE
-SECURE_CERT_PATH=""
-SECURE_KEY_PATH=""
+SECURE_CERT_PATH="localhost.pem"
+SECURE_KEY_PATH="localhost-key.pem"
 
 #EMAIL
 EMAIL_ADDRES = "PromHistory@gmail.com"
