--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,7 @@
           ]
      },
      "devDependencies": {
-          "@types/js-cookie": "^3.0.2"
+          "@types/js-cookie": "^3.0.2",
+          "react-snap": "^1.23.0"
      }
 }
