--- a/develop.env
+++ b/develop.env
@@ -1,11 +1,14 @@
 #SERVER
 URL = "http://localhost:8000"
-PORT = 8000
+HTTP_PORT = 80
+HTTPS_PORT = 443
+DEV_HTTP_PORT = 8000
+DEV_HTTPS_PORT = 4430
 CLIENT_PORT = 3000
 CLIENT_URL = "http://localhost:3000"
 WHITELISTED_DOMAINS = "http://localhost:3000,https://localhost:8000,https://oauth.vk.com"
 DATABASE_URL="mysql://root:0000@localhost:3306/promenade_history"
-SECURE = 'true'
+SECURE = 'false'
 
 #SECURE
 SECURE_CERT_PATH="localhost.pem"
